topc analytics and filter and download images

--- a/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
+++ b/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
@@ -77,13 +77,13 @@ At the top of [**the Summary report**](https://docs.microsoft.com/en-us/power-vi
 
 ##### **Engagement over time**
 
-An engaged session represents a session in which a specific user created or escalation topic was triggered. This is helpful to understand topic gaps.
+An **engaged session represents a session in which a specific user created or escalation topic was triggered**. This is helpful to understand topic gaps that can be addressed by authors.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
 
 ##### **Session outcomes**
 
-As described above, session outcomes help us understand if a bot helped answer the imperative question. We tend to want to see the resolution rate in the KPI increasing and if its not this chart can help. The chart shows session outcomes over a period of time so we can begin to see downward trends.
+As described above, session outcomes help us understand if a bot helped answer the imperative question. We tend to **want to see the resolution rate in the KPI increasing** and if its not this chart can help. The chart shows session outcomes over a period of time so we can begin to see downward trends.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-SessionsOverTime.JPG" style="zoom: 67%;" />
 
@@ -101,7 +101,7 @@ A **red bar represents negative impact** while a **blue bar represents positive*
 
 ##### Escalation Rate KPI and Drivers
 
-The Resolution KPI in the header includes the percentage and the trend during our selected time frame. 
+The **Escalation KPI** in the header includes the percentage and the trend during our selected time frame. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Topic-Analytics-EscalationKPI.JPG"  />
 
@@ -113,7 +113,7 @@ A **red bar represents negative impact** while a **blue bar represents positive*
 
 ##### Abandon Rate KPI and Drivers
 
-The Resolution KPI in the header includes the percentage and the trend during our selected time frame. 
+The **Abandon KPI** in the header includes the percentage and the trend during our selected time frame. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Topic-Analytics-AbandonmentKPI.JPG"  />
 
@@ -125,11 +125,9 @@ A **red bar represents negative impact** while a **blue bar represents positive*
 
 ### **Customer Satisfaction**
 
-Customer satisfaction leads to increased usage of our bot and this report help identify which topics are having the most impact in this area. [The **Customer Satisfaction** report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-csat) is where analysts will go to stay informed in this area. Topics with a high CSAT impact are great but look to couple this with the number of engaged sessions. In the deep dive its suggested to sort by the highest engaged sessions and starting there as they represent the most popular sessions. Review the CSAT impact of this topic as well as the outcome KPIs.
+**Customer satisfaction** leads to increased usage of our bot and this report help identify which topics are having the most impact in this area. [The **Customer Satisfaction** report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-csat) is where analysts will go to stay informed in this area. Topics with a high CSAT impact are great but **look to couple this with the number of engaged sessions**. In the [deep dive](https://www.youtube.com/watch?v=o8o9kPGAq5E&feature=youtu.be) its suggested to sort by the highest engaged sessions and starting there as they represent the most popular sessions. Review the CSAT impact of this topic as well as the outcome KPIs.
 
-<insert csat image>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/CSAT-Overview.JPG" style="zoom: 67%;" />
 
 The **Average CSAT Score** is a great way to see how customer satisfaction has been trending over past week or month.
 
@@ -143,7 +141,7 @@ The **CSAT survey response rate** over time can help analysts visualize complete
 
 ### **Session Information**
 
-[The **Sessions** report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-sessions) allows admins the ability to review and monitor how sessions are doing, including the topic, transcript and outcome. The session picker currently let's admins pick from sessions within a given week.
+[The **Sessions** report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-sessions) allows admins the ability to review and monitor **how sessions are doing, including the topic, transcript and outcome**. The session picker currently let's admins pick from sessions within a given week.
 
 
 
@@ -155,41 +153,45 @@ When opening the spreadsheet the following columns are available: **Start Time**
 
 ### **Billed Sessions**
 
-[The **Billing** report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-billed-sessions) helps to better understand how sessions are being billed, based on their usage.
-
-https://docs.microsoft.com/en-us/power-virtual-agents/analytics-billed-sessions
+[The **Billing** report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-billed-sessions) helps to better understand how sessions are being billed, based on their usage. Using these metrics collected, admins can better forecast **how many sessions to purchase** going forward based on historical trends. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/analytics-billed-sessions.png" style="zoom: 67%;" />
 
 ### Topic Analytics Report
 
-**Topic Usage**
+Each topic contains analytics that can help administrators further drill into impact and outcome metrics. These are shown in [the Topic Analytics report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-topic-details). To navigate to these analytics, choose a topic and click the button as shown below.
 
-See how individual topics are doing and how well they're working at resolving issues.
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Topic-Analytics-Navigate.JPG" style="zoom: 67%;" />
 
-https://docs.microsoft.com/en-us/power-virtual-agents/analytics-topic-details
+This report shows **how individual topics are doing** and how well they're working at resolving issues.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Topic-Analytics-Overview.JPG" style="zoom: 67%;" />
 
 #### Filtering the data returned
 
-The Power Automate Analytics will show environments an admin has access to review data for. During acceptance or end to end testing, admins may want to focus on a specific environment and time range. [To do this](https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps#how-do-i-change-environments), click the "**Change filters**" button for any dashboard.
+The **Power Virtual Agent Analytics** will show environments an admin has access to review data for. During session and engagement review, analysts may want to focus on a specific environment and time range. To change this, click the filter located to the upper right on each report. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-KPI_Header.JPG" style="zoom: 67%;" />
 
+The filter can be set for 7 or 30 days for reports. For sessions, downloadable reports can be filtered weekly within a 30 day window.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/PVA-Analytics-Download.JPG" style="zoom: 67%;" />
+
 #### Export data for Analysis
 
-Currently the ability to export from the **Power Platform Admin Center** is not available as it is with the **Common Data Service for Analytics**. I would expect this to change and will update this article once more information is available. Until then [**most charts can be exported via the ellipsis**](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#download-reports) like other **Microsoft Power BI** reports. 
+Currently the only way to export data from **Power Virtual Agent Analytics** is by using the ellipsis on the specified report. When prompted click the "**Export data**" button. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
 
 ## Next Steps
 
-**Power Automate Analytics** is a powerful tool enabling administrators to view a wealth of information across environments for the **Power Automate** platform. These analytics can show trends and alert for issues that need further investigation. Continuing this series, we will examine further tools and mechanisms that help us better understand both user activity and how to monitor and troubleshoot individual flow runs.
+**Power Virtual Agent Analytics** allow analysts to review conservations and engagements users have with bots. Outcomes are represented as successful resolutions, escalations to live agents, or abandonments. To further analyze each session, **use the Session report to download individual sessions**. Each session includes **the entire conversation**, which **can be extracted to see how a user responds to a bot's messaging**. Follow up questions from a user can be used to **enhance the conversation and identify gaps** in the topic.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
 
 Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
-Be sure to [subscribe to the official blog](https://flow.microsoft.com/en-us/blog/) from the **Power Automate** team to stay up to date on the latest news and offerings!
+Be sure to subscribe to [the official blog](https://powervirtualagents.microsoft.com/en-us/blog/category/powervirtualagents/) from the [**Power Virtual Agents**](https://powervirtualagents.microsoft.com/en-us/blog/category/powervirtualagents/) team to stay up to date on the latest news and offerings!
 
 ## Index
 
