added permissions images

--- a/docs/02.01.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs.md
+++ b/docs/02.01.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs.md
@@ -135,7 +135,9 @@ The Launched event is a highly asked for event that captured the precise time th
 
 ##### Edited App Permission Event
 
-The Edited App Permission event is of interest as it shows when and who shared an app. The permission level (*CanEdit* or *CanView*), the owner who shared and when they shared the app is audited. 
+The Edited App Permission event is of interest as it shows when and who shared an app. The permission level (*CanEdit* or *CanView*), the owner who shared and when they shared the app is audited. Resources can be shared and specifically for the Common Data Service connector, [security roles can be assigned for use with the connector](https://docs.microsoft.com/en-us/powerapps/maker/canvas-apps/share-app-resources), which **will also assign the security role to the user within the environment**.
+
+<insert crm and power app images>
 
 ## Searching the Unified Audit Log
 
