added and moved canvas app ual images

--- a/docs/02.01.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs.md
+++ b/docs/02.01.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs.md
@@ -1,14 +1,16 @@
-# Monitoring the Power Platform: Canvas Driven Apps - Auditing and Activity Logs
+# Monitoring the Power Platform: Canvas Driven Apps - Auditing and Activity Logs Part 1
 
 ## Summary
 
-**Microsoft Power Apps Canvas Apps** provide users the ability to quickly create and publish applications to their enterprise. With this ability comes concerns with governance to ensure users are allowed the appropriate permissions as well as identifying and highlighting specific apps across the organization. This article will explore **promoting a Canvas App as a featured or hero app** which can be used as communication devices during crisis, internal training, etc. From there the article will go into **activity and auditing to help administrators view specific actions** taken within the **Power Platform**. 
+**Microsoft Power Apps Canvas Apps** provide users the ability to quickly create and publish applications to their enterprise. With this ability comes concerns with governance to ensure users are allowed the appropriate permissions as well as identifying and highlighting specific apps across the organization. This article will explore **promoting a Canvas App as a featured or hero app** which can be used as communication devices during crisis, internal training, etc. From there the article will discuss other scenarios useful for monitoring Canvas Apps with the Administration PowerShell cmdlets. From there the article will go into **activity events ** taken within the **Power Platform**. 
 
 ## Featured and Hero Apps
 
 Once your enterprise begins creating **Power Apps**, one thing users will begin to notice is abundance of apps in your **Power Apps** environment. The **Power Apps Player** has functionality to allow users to search for a specific app but knowing what to look for and who published it can be a challenge. <u>By default **Power Apps** provides views which can help distinguish apps created or favorites by a user.</u> 
 
 <image of different lists>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/LastRefreshTime.JPG"  />
 
 For an enterprise, the ability to quickly create and promote an app is key driver for choosing **Power Apps** as a platform. *In a real world example, consider the COVID-19 crisis*. An enterprise may want to push out an app that **allows users to check in**, **provide emergency contacts**, or **stay up to date on the latest news**. An example of such as app is the [Crisis Communication Template](https://docs.microsoft.com/en-us/powerapps/maker/canvas-apps/sample-crisis-communication-app), developed by Microsoft. Luckily Power Apps provides a mechanism to set an app to be a featured app which will prominently display in a specific view allowing users to quickly find and open the app.
 
@@ -20,7 +22,7 @@ A **Hero App**, is an app that will be shown at the top of default list for **Po
 
 ### Using PowerShell to create Featured and Hero Apps
 
-To set an app as a Featured or Hero app, two PowerShell cmdlets are required. Before using the cmdlets, the specific modules that contain them need to be downloaded for use. The article, https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell , has step by step instructions of how to get and work with the modules. 
+To set an app as a Featured or Hero app, two PowerShell cmdlets are required. Before using the cmdlets, the specific modules that contain them need to be downloaded for use. The article, [PowerShell support for Power Apps](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell), has step by step instructions of how to get and work with the modules. 
 
 #### Install the Modules
 
@@ -73,6 +75,28 @@ Set-AdminPowerAppAsHero -AppName {AppName}
 
 When the commands are run, a response is sent back with a success HTTP code and headers including a request identifier. To confirm the Power App is Featured or Hero, a user can navigate to the Power Apps Player to view. As an administrator, I'll want tighter control and visibility into these actions as well as other lifecycle events for Power Apps. Capturing when apps are created and destroyed, updated and restored are integral to better understanding usage patterns and ensuring governance is applied. To find out more, we will begin to search the Unified Audit Log for activity and audit logs.
 
+### Other Useful Power Apps Administration PowerShell Tasks
+
+https://docs.microsoft.com/en-us/power-platform/admin/wp-task-automation-powershell
+
+The PowerShell module for Power Apps Administration tasks is an extremely useful way to view and take action on environments, apps, flows, connectors and permissions. The PowerShell Support for Power Apps page [contains a list of common operations](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell#environments-commands) an administrator would find useful for governing an organization's use of the Power Platform and its environments. Some commands i'd like to call out are:
+
+| Command                          | Description                                                  |
+| -------------------------------- | ------------------------------------------------------------ |
+| Get-AdminDlpPolicy               | Displays all of the Data Loss Prevention Policies            |
+| Remove-AllowedConsentPlans       | Can be used to remove the ability for uses to create trial licenses.<br />NOTE: It is important to note that when using *Remove-AllowedConsentPlans* all existing plans of the specified type will be removed from all users in the tenant and will not be recoverable. |
+| Set-AdminPowerAppOwner           | Changes the owner of a Power App. This is useful for reassigning if someone leave the organization. |
+| Set-AdminFlowOwnerRole           | Changes the owner of a Power Automate Flow. Again, useful for reassignment. |
+| Recover-AdminPowerAppEnvironment | Recover a Power App Environment                              |
+
+The "**Get**" cmdlets can all be used for **reporting and logging of the current state of an environment**. The below command from the examples on the **Power Apps PowerShell** page shows how to use the **OutputFilePath** argument to **write to a text file**.
+
+```
+Get-AdminPowerAppsUserDetails -OutputFilePath '.\adminUserDetails.txt' –UserPrincipalName 'admin@bappartners.onmicrosoft.com'
+```
+
+Consider the use of these commands with techniques discussed in *Part 2 of Canvas Apps - Auditing and Activity Logs* for additional logging capabilities.
+
 ## Activity Events for Canvas Apps
 
 ### What events are audited?
@@ -108,6 +132,8 @@ The same goes with **promoting a Hero app** as well as other events such as **re
 
 <insert restore image>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/LastRefreshTime.JPG"  />
+
 #### List of Events
 
 [Activity logging for Power Apps Audit Schema](https://docs.microsoft.com/en-us/power-platform/admin/logging-powerapps)
@@ -125,7 +151,7 @@ The same goes with **promoting a Hero app** as well as other events such as **re
 | Marked app as Hero     | Every time the app is marked as Hero                         |
 | Deleted app permission | Every time a user's permissions to the app is removed        |
 
-##### Designer Events
+##### Life Cycle Events
 
 
 
@@ -139,74 +165,13 @@ The Edited App Permission event is of interest as it shows when and who shared a
 
 <insert crm and power app images>
 
-## Searching the Unified Audit Log
 
-Searching the Unified Audit Log can be performed manually but the log can also be search with automation. Manually there is a portal called the Office 365 Security and Compliance Center Portal that provides a centralized area for auditing all Office 365 services including the Power Platform. If automation is desired the Unified Audit Log offers both a PowerShell module and an API which can be subscribed to. This section covers all three of these in detail. 
-
-#### The Office 365 Security and Compliance Center Portal
-
-The Office 365 Security and Compliance Center found at https://protection.office.com can be used by security analysts to manually search for specific events using a portal user interface. 
-
-<u>NOTE: Be mindful of the [permissions](https://docs.microsoft.com/en-us/microsoft-365/security/office-365-security/permissions-in-the-security-and-compliance-center?view=o365-worldwide) and licenses needed to use this feature.</u>
-
-![](https://docs.microsoft.com/en-us/power-platform/admin/media/audit-log-search-pa.png)
-
-As shown in the image above, a single action or multiple activities for Canvas App can be chosen for analysis. To begin our search, [run an audit log search](https://docs.microsoft.com/en-us/microsoft-365/compliance/search-the-audit-log-in-security-and-compliance?view=o365-worldwide#search-the-audit-log) by specifying the activities, the time range and optional search parameters such as users or site. Once the search is complete, [review the results](https://docs.microsoft.com/en-us/microsoft-365/compliance/search-the-audit-log-in-security-and-compliance?view=o365-worldwide#step-2-view-the-search-results) in the portal. The results are maxed out at the most 5000 newest events and are incremented 150 records at a time. 
-
-#### PowerShell
-
-For PowerShell the ***Search-UnifiedAuditLog***, part of the **MSOline** module, is used for **Office 365** services including **Power Apps Canvas and Model Driven Apps**. For **Canvas Apps** there exist a record type called "**PowerAppsApp**" that will scope to only logs from **Canvas Apps**. Using the same table above, here are the PowerShell Operation equivalents to each captured event:
-
-| Event                  | PowerShell Operation      |
-| :--------------------- | :------------------------ |
-| Created app            | CreatePowerApp            |
-| Launched app           | LaunchPowerApp            |
-| Marked app as Featured | MarkPowerAppAsFeatured    |
-| Restored app version   | PromotePowerAppVersion    |
-| Edited app             | UpdatePowerApp            |
-| Published app          | PublishPowerApp           |
-| Edited app permission  | PowerAppPermissionEdited  |
-| Deleted app            | DeletePowerApp            |
-| Marked app as Hero     | MarkPowerAppAsHero        |
-| Deleted app permission | PowerAppPermissionDeleted |
-
-```
-$endDate = Get-Date
-$startDate = $endDate.AddDays(-7) #Search last 7 days
-Search-UnifiedAuditLog -StartDate $startDate -EndDate $endDate -RecordType PowerAppsApp
-```
-
-![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CanvasApps/UnifiedAuditLog-Examples.JPG)
-
-Depending on what type of audit record you're looking for, the search can be filtered using the Operation argument.
-
-Example of searching for Canvas App creation events:
-
-```
-Search-UnifiedAuditLog -StartDate $startDate -EndDate $endDate -RecordType PowerAppsApp -Operation "CreatePowerApp"
-```
-
-Example of searching for Canvas App launch events:
-
-```
-Search-UnifiedAuditLog -StartDate $startDate -EndDate $endDate -RecordType PowerAppsApp -Operation "LaunchPowerApp"
-```
-
-Each record returned includes the data of the audit, the user and the data collected within the ***AuditData*** property. The **app and environment properties** are available within this property which can be **extracted and stored for contextual information to a log data store**.
-
-### Office 365 Management Activity API
-
-Another way to automate delivery of audit data is by use of the **Office 365 Management Activity API**. A really great article by ... covers how to setup a subscription and webhook to deliver to Cosmos DB. 
-
-## Advanced Audit in Microsoft 365
-
-A recent addition to the compliance tooling within Office 365 is the Advanced Audit feature. Currently I do not see anything specific to the Power Platform but this may change in the future. The key call out I see from the documentation is the ability to retain audit logs from one year and the high bandwidth accessibility for the **Office 365 Management Activity API**.
 
 ## Next Steps
 
 In this article we have covered getting started with the **Power App Administration PowerShell** module and cmdlets for **Featured and Hero App promotion**. Continue exploring the capabilities of this module as it pertains to your **Power Apps Canvas App** administrative operations. 
 
-We have also covered the **Unified Audit Logs** and what activities are currently captured for **Power Apps Canvas Apps**. Discussed were techniques to view the audit logs within the **Office 365 Security and Compliance Portal** as well as automated techniques using subscriptions and webhooks as well as **automating PowerShell using Azure Automation**. <u>Consider the combination of using the **Unified Audit Log** to notify of events happening and the **Power App Administration** cmdlets to apply security and enrich audits from the audit log.</u>
+We have also covered the what activities are currently captured for **Power Apps Canvas Apps**. Discussed in Part 2 are techniques to view the audit logs within the **Office 365 Security and Compliance Portal** as well as automated techniques using subscriptions and webhooks as well as **automating PowerShell using Azure Automation**. 
 
 This article is designed to supplement the article on **Power App Analytics**, which provides more of an all up view of Canvas App usage. Combining these two documents, an administrator can now <u>track analytic metrics as well as the events that define those metrics</u>.
 
