--- a/docs/02.01.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs.md
+++ b/docs/02.01.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs.md
@@ -132,11 +132,11 @@ The same goes with **promoting a Hero app** as well as other events such as **re
 
 <insert restore image>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/LastRefreshTime.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/LastRefreshTime.JPG"  />
 
 #### List of Events
 
-[Activity logging for Power Apps Audit Schema](https://docs.microsoft.com/en-us/power-platform/admin/logging-powerapps)
+The table below shows the events captured for Power Apps including **life cycle events of app**, **user modifications** and when a user launched a specific **Canvas App**. For an up to date reference check out the [Activity logging for Power Apps Audit Schema](https://docs.microsoft.com/en-us/power-platform/admin/logging-powerapps) document.
 
 | Event                  | Description                                                  |
 | :--------------------- | :----------------------------------------------------------- |
@@ -153,19 +153,25 @@ The same goes with **promoting a Hero app** as well as other events such as **re
 
 ##### Life Cycle Events
 
-
+Life cycle events include when a maker creates an app, edits and publishes an app. Other events include restoring an app to a prior version as well as the previously mentioned promoting to a featured or hero app.
 
 ##### Launched Event
 
-The Launched event is a highly asked for event that captured the precise time that a user logins into an app.
+The Launched event is a highly asked for event that captured the precise time that a user logins into an app. This audited event allows admins to see the **user's Azure identifier** and **which app they logged into**. Not shown is the **user's session identifier** but this can be found **within the specific Canvas App run** which will be discussed later.
 
 ##### Edited App Permission Event
 
-The Edited App Permission event is of interest as it shows when and who shared an app. The permission level (*CanEdit* or *CanView*), the owner who shared and when they shared the app is audited. Resources can be shared and specifically for the Common Data Service connector, [security roles can be assigned for use with the connector](https://docs.microsoft.com/en-us/powerapps/maker/canvas-apps/share-app-resources), which **will also assign the security role to the user within the environment**.
+The **Edited App Permission event** is of interest as it shows **when and who shared an app**. The permission level (***CanEdit*** or ***CanView***) given, the **owner who shared** and **when they shared the app** is audited. 
 
-<insert crm and power app images>
+<insert share gif>
 
+Resources can be shared and specifically for the **Common Data Service** connector, [security roles can be assigned for use with the connector](https://docs.microsoft.com/en-us/powerapps/maker/canvas-apps/share-app-resources), which **will also assign the security role to the user within the environment**.
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/CustomSysAdminRoleInPowerApps.JPG" style="zoom:67%;" />
+
+dd
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/CustomSysAdminRoleInCRM.JPG" style="zoom:67%;" />
 
 ## Next Steps
 
