--- a/docs/02.01.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs.md
+++ b/docs/02.01.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs.md
@@ -2,37 +2,37 @@
 
 ## Summary
 
-**Microsoft Power Apps Canvas Apps** provide users the ability to quickly create and publish applications to their enterprise. With this ability comes concerns with governance to ensure users are allowed the appropriate permissions as well as identifying and highlighting specific apps across the organization. This article will explore **promoting a Canvas App as a featured or hero app** which can be used as communication devices during crisis, internal training, etc. From there the article will discuss other scenarios useful for monitoring Canvas Apps with the Administration PowerShell cmdlets. From there the article will go into **activity events ** taken within the **Power Platform**. 
+**Microsoft Power Apps Canvas Apps** provide users the ability to quickly create and publish applications to their enterprise. With this ability comes concerns with governance to ensure users are allowed the appropriate permissions as well as identifying and highlighting specific apps across the organization. This article will explore **promoting a Canvas App as a featured or hero app** which can be used as communication devices during crisis, internal training, etc. From there the article will discuss other scenarios useful for monitoring **Canvas Apps** with the **Power Apps Administration PowerShell** cmdlets. From there the article will go into **activity events ** taken within the **Power Platform**. 
 
 ## Featured and Hero Apps
 
 Once your enterprise begins creating **Power Apps**, one thing users will begin to notice is abundance of apps in your **Power Apps** environment. The **Power Apps Player** has functionality to allow users to search for a specific app but knowing what to look for and who published it can be a challenge. <u>By default **Power Apps** provides views which can help distinguish apps created or favorites by a user.</u> 
 
-<image of different lists>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/LastRefreshTime.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/PowerApps.FeaturedAppView.png" style="zoom:50%;" />
 
 For an enterprise, the ability to quickly create and promote an app is key driver for choosing **Power Apps** as a platform. *In a real world example, consider the COVID-19 crisis*. An enterprise may want to push out an app that **allows users to check in**, **provide emergency contacts**, or **stay up to date on the latest news**. An example of such as app is the [Crisis Communication Template](https://docs.microsoft.com/en-us/powerapps/maker/canvas-apps/sample-crisis-communication-app), developed by Microsoft. Luckily Power Apps provides a mechanism to set an app to be a featured app which will prominently display in a specific view allowing users to quickly find and open the app.
 
-<insert image of featured gallery>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/PowerApps.FeaturedAppAndHeroApp.png" style="zoom:50%;" />
 
 As shown above, multiple featured apps can be added to a list available to all **Power Apps** users within the organization. 
 
 A **Hero App**, is an app that will be shown at the top of default list for **Power Apps**. This is also extended to other lists, even the Featured List. The **Hero App** will also be given the headline "**FEATURED APP**" to help distinguish it from other apps. [As described in Pat Dunn's article, Discoverability in the Enterprise](https://powerapps.microsoft.com/en-us/blog/powerapps-discoverability-in-the-enterprise/), there can be only one **Hero App** for an organization. Also detailed in the article are the **PowerShell** cmdlets needed to create **Featured and Hero Apps**.
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/PowerApps.HeroApp.png" style="zoom:50%;" />
+
 ### Using PowerShell to create Featured and Hero Apps
 
-To set an app as a Featured or Hero app, two PowerShell cmdlets are required. Before using the cmdlets, the specific modules that contain them need to be downloaded for use. The article, [PowerShell support for Power Apps](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell), has step by step instructions of how to get and work with the modules. 
+To set an app as a **Featured** or **Hero** app, two **PowerShell** cmdlets are required. Before using the cmdlets, the specific modules that contain them need to be downloaded for use. The article, [PowerShell support for Power Apps](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell), has step by step instructions of how to get and work with the modules. 
 
 #### Install the Modules
 
-To download the modules as an administrator, use the following command in PowerShell:
+To download the modules as an administrator, use the following command in **PowerShell**:
 
 ```
 Install-Module -Name Microsoft.PowerApps.Administration.PowerShell 
 ```
 
-If you don't have admin rights, use the following PowerShell command:
+If you don't have admin rights, use the following **PowerShell** command:
 
 ```
 Save-Module -Name Microsoft.PowerApps.Administration.PowerShell -Path 
@@ -43,7 +43,7 @@ Be mindful of the -Path argument if working with automation such as **Azure DevO
 
 #### Connect to Power Apps
 
-To connect to your **Power Apps** tenant, run the following command in PowerShell:
+To connect to your **Power Apps** tenant, run the following command in **PowerShell**:
 
 ```
 Add-PowerAppsAccount
@@ -53,11 +53,11 @@ That command will prompt you for credentials. Using the *-Username* and *-Passwo
 
 #### Get Environment and Canvas App Identifiers
 
-Once connected, you'll need the **Canvas App** identifier to set as the **Featured or Hero App**. A quick way for a Power App Maker or Admin to find the values needed are to navigate to the app itself and get the identifiers from the URL. The below URL is from my app I want to set as a Featured App:
+Once connected, you'll need the **Canvas App** identifier to set as the **Featured or Hero App**. A quick way for a **Power App** Maker or Admin to find the values needed are to navigate to the app itself and get the identifiers from the URL. The below URL is from my app I want to set as a Featured App:
 
 https://make.powerapps.com/environments/{Environment ID}/apps/{Canvas App ID}/
 
-This approach works well today if the URL continues to show the **Canvas App** Identifier. Another approach is to use PowerShell to get the App Id. The Environment Id can be found using the **Get-AdminPowerAppEnvironment** cmdlet (*EnvironmentName*) while the App id can be found in the **Get-AdminPowerApp** cmdlet (*AppName*). Combining those values we can now use the Featured and Hero commands in PowerShell.
+This approach works well today if the URL continues to show the **Canvas App** Identifier. Another approach is to use **PowerShell** to get the App Id. The Environment Id can be found using the **Get-AdminPowerAppEnvironment** cmdlet (*EnvironmentName*) while the App id can be found in the **Get-AdminPowerApp** cmdlet (*AppName*). Combining those values we can now use the Featured and Hero commands in PowerShell.
 
 #### Set Canvas App as Featured or Hero App
 
@@ -73,13 +73,11 @@ Set-AdminPowerAppAsFeatured -AppName {AppName}
 Set-AdminPowerAppAsHero -AppName {AppName}
 ```
 
-When the commands are run, a response is sent back with a success HTTP code and headers including a request identifier. To confirm the Power App is Featured or Hero, a user can navigate to the Power Apps Player to view. As an administrator, I'll want tighter control and visibility into these actions as well as other lifecycle events for Power Apps. Capturing when apps are created and destroyed, updated and restored are integral to better understanding usage patterns and ensuring governance is applied. To find out more, we will begin to search the Unified Audit Log for activity and audit logs.
+When the commands are run, a response is sent back with a success HTTP code and headers including a request identifier. To confirm the **Power App is Featured or Hero**, a user can navigate to the **Power Apps Player** to view. As an administrator, I'll want tighter control and visibility into these actions as well as other lifecycle events for **Power Apps**. Capturing when apps are created and destroyed, updated and restored are integral to better understanding usage patterns and ensuring governance is applied. To find out more, refer to **Part 2** where we will begin to search the **Unified Audit Log** for activity and audit logs.
 
 ### Other Useful Power Apps Administration PowerShell Tasks
 
-https://docs.microsoft.com/en-us/power-platform/admin/wp-task-automation-powershell
-
-The PowerShell module for Power Apps Administration tasks is an extremely useful way to view and take action on environments, apps, flows, connectors and permissions. The PowerShell Support for Power Apps page [contains a list of common operations](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell#environments-commands) an administrator would find useful for governing an organization's use of the Power Platform and its environments. Some commands i'd like to call out are:
+The **PowerShell module for Power Apps Administration tasks** is an extremely useful way to view and take action on environments, apps, flows, connectors and permissions. The **PowerShell Support for Power Apps** page [contains a list of common operations](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell#environments-commands) an administrator would find useful for governing an organization's use of the **Power Platform** and its environments. Some commands I'd like to call out are:
 
 | Command                          | Description                                                  |
 | -------------------------------- | ------------------------------------------------------------ |
@@ -101,11 +99,11 @@ Consider the use of these commands with techniques discussed in *Part 2 of Canva
 
 ### What events are audited?
 
-The events audited by the **Office 365 Security and Compliance Center** allow for administrators to search across multiple services offered including Power Apps. These logs are collected at the SDK layer meaning one action can actually trigger multiple event logs in the log store. Events collected include app lifecycle actions such as when an app is created, edited or deleted. User actions include launching an app or modifying permissions.
+The events audited by the **Office 365 Security and Compliance Center** allow for administrators to search across multiple services offered including **Power Apps**. These **logs are collected at the SDK layer** meaning one action can actually trigger multiple event logs in the log store. Events collected include app lifecycle actions such as when an app is created, edited or deleted. User actions include launching an app or modifying permissions.
 
 #### Common Audit Properties
 
-Each audit record includes common properties that can be used to help search or even correlate events together. Fields such as precise time stamps, the specific Canvas App, the operation performed and Identity of the record. 
+Each audit record includes common properties that can be used to help search or even correlate events together. Fields such as **precise time stamp**s, the **specific Canvas App**, the **operation performed** and **Identity of the record**. 
 
 | Field name      | Description                                                  |
 | :-------------- | :----------------------------------------------------------- |
@@ -130,9 +128,9 @@ The **Identity** value is key as it can help us better understand a chain of eve
 
 The same goes with **promoting a Hero app** as well as other events such as **restoring a Canvas App** from a previous version.
 
-<insert restore image>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/CanvasApp.Restore.JPG" style="zoom:50%;" />
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/LastRefreshTime.JPG"  />
+**In Part 2**, we will cover these events in detail to show how they are connected to paint a broader picture.
 
 #### List of Events
 
@@ -163,13 +161,13 @@ The Launched event is a highly asked for event that captured the precise time th
 
 The **Edited App Permission event** is of interest as it shows **when and who shared an app**. The permission level (***CanEdit*** or ***CanView***) given, the **owner who shared** and **when they shared the app** is audited. 
 
-<insert share gif>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/ShareAnApp.gif" style="zoom:67%;" />
 
 Resources can be shared and specifically for the **Common Data Service** connector, [security roles can be assigned for use with the connector](https://docs.microsoft.com/en-us/powerapps/maker/canvas-apps/share-app-resources), which **will also assign the security role to the user within the environment**.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/CustomSysAdminRoleInPowerApps.JPG" style="zoom:67%;" />
 
-dd
+In the image above, I gave the user the "*Custom Sys Admins*" security role for the **Common Data Service connector**. Navigating to the user roles within the **Model Driven App** I can see the user now <u>has the same security role</u>. Consider the implications before adding a security role to a **Canvas App** user. For further reference, check out the [**Security Model for Common Data Service**](https://docs.microsoft.com/en-us/powerapps/developer/common-data-service/security-model).
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/CustomSysAdminRoleInCRM.JPG" style="zoom:67%;" />
 
@@ -177,9 +175,9 @@ dd
 
 In this article we have covered getting started with the **Power App Administration PowerShell** module and cmdlets for **Featured and Hero App promotion**. Continue exploring the capabilities of this module as it pertains to your **Power Apps Canvas App** administrative operations. 
 
-We have also covered the what activities are currently captured for **Power Apps Canvas Apps**. Discussed in Part 2 are techniques to view the audit logs within the **Office 365 Security and Compliance Portal** as well as automated techniques using subscriptions and webhooks as well as **automating PowerShell using Azure Automation**. 
+We have also covered the what activities are currently captured for **Power Apps Canvas Apps**. Discussed in **Part 2** are techniques to view the audit logs within the **Office 365 Security and Compliance Portal** as well as **automated techniques**. 
 
-This article is designed to supplement the article on **Power App Analytics**, which provides more of an all up view of Canvas App usage. Combining these two documents, an administrator can now <u>track analytic metrics as well as the events that define those metrics</u>.
+This article is designed to supplement the article on **Power App Analytics**, which provides more of an all up view of **Canvas App** usage. Combining these two documents, an administrator can now <u>track analytic metrics as well as the events that define those metrics</u>.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
 
