added portal images

--- a/docs/02.01.03 - Monitoring Canvas Driven Apps - Auditing and Activity Logs Part 2.md
+++ b/docs/02.01.03 - Monitoring Canvas Driven Apps - Auditing and Activity Logs Part 2.md
@@ -2,23 +2,31 @@
 
 ## Summary
 
-ss
+**Microsoft Power Apps Canvas Apps** provide users the ability to quickly create and publish applications to their enterprise. With this ability comes concerns with governance to ensure users are allowed the appropriate permissions as well as identifying and highlighting specific apps across the organization.
+
+This article will build off of Canvas Apps - Auditing and Activity Part 2 to examine how to search and store audit and activity logs for Canvas Apps.
 
 ## Searching the Unified Audit Log
 
 Searching the Unified Audit Log can be performed manually but the log can also be search with automation. Manually there is a portal called the Office 365 Security and Compliance Center Portal that provides a centralized area for auditing all Office 365 services including the Power Platform. If automation is desired the Unified Audit Log offers both a PowerShell module and an API which can be subscribed to. This section covers all three of these in detail. 
 
-#### The Office 365 Security and Compliance Center Portal
+## The Office 365 Security and Compliance Center Portal
+
+### Accessing the Office 365 Audit Repots
+
+<u>NOTE: Be mindful of the [permissions](https://docs.microsoft.com/en-us/microsoft-365/security/office-365-security/permissions-in-the-security-and-compliance-center?view=o365-worldwide) and licenses needed to use this feature.</u> 
+
+Users will need to be an Office 365 Global Administrator or be a member of one or more Security and Compliance Center role groups. [To provide a user access to the Security and Compliance Center](https://docs.microsoft.com/en-us/microsoft-365/security/office-365-security/grant-access-to-the-security-and-compliance-center?view=o365-worldwide), use the Office 365 Admin Center and open the Admin center for Compliance. Alternatively, you can directly access the permissions page from [here](https://protection.office.com/permissions). The permission needed is "**View-Only Audit Logs**" or "**Audit Logs**" which allows for viewing and exporting of audit reports.
+
+### Navigating the Office 365 Compliance Center Portal
 
 The Office 365 Security and Compliance Center found at https://protection.office.com can be used by security analysts to manually search for specific events using a portal user interface. 
-
-<u>NOTE: Be mindful of the [permissions](https://docs.microsoft.com/en-us/microsoft-365/security/office-365-security/permissions-in-the-security-and-compliance-center?view=o365-worldwide) and licenses needed to use this feature.</u>
 
 ![](https://docs.microsoft.com/en-us/power-platform/admin/media/audit-log-search-pa.png)
 
 As shown in the image above, a single action or multiple activities for Canvas App can be chosen for analysis. To begin our search, [run an audit log search](https://docs.microsoft.com/en-us/microsoft-365/compliance/search-the-audit-log-in-security-and-compliance?view=o365-worldwide#search-the-audit-log) by specifying the activities, the time range and optional search parameters such as users or site. Once the search is complete, [review the results](https://docs.microsoft.com/en-us/microsoft-365/compliance/search-the-audit-log-in-security-and-compliance?view=o365-worldwide#step-2-view-the-search-results) in the portal. The results are maxed out at the most 5000 newest events and are incremented 150 records at a time. 
 
-#### PowerShell
+### PowerShell
 
 For PowerShell the ***Search-UnifiedAuditLog***, part of the **MSOline** module, is used for **Office 365** services including **Power Apps Canvas and Model Driven Apps**. For **Canvas Apps** there exist a record type called "**PowerAppsApp**" that will scope to only logs from **Canvas Apps**. Using the same table above, here are the PowerShell Operation equivalents to each captured event:
 
